# wasm-image-resizer

./: Cargo.toml  README.md  build.sh  serve.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: node-debian.sh
sample/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
sample/src/: index.ts
src/: lib.rs
