[package]
name = "wasm-image-resizer"
version = "0.1.0"
edition = "2018"
description = "resize image with wasm"
license = "MIT"
repository = "https://github.com/yokra9/wasm-image-resizer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"