[package]
name = "wasm-image-resizer"
version = "0.1.0"
edition = "2018"
description = "resize image with wasm"
license = "MIT"
repository = "https://github.com/yokra9/wasm-image-resizer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
image = { version = "0.23.14", default-features = false, features = [
    "gif",
    "jpeg",
    #"jpeg_rayon", # WASMでサポートされていない
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
] }
js-sys = "0.3.51"
